--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lib"
   ],
   "scripts": {
-    "build": "rimraf lib && babel index.js --out-dir lib",
+    "test": "jest",
+    "build": "rimraf lib && babel src --out-dir lib",
     "lint": "eslint --ext .js src",
     "precommit": "npm run lint"
   },
@@ -41,6 +42,8 @@
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^7.1.0",
     "expect": "^1.20.2",
+    "jest": "^20.0.4",
+    "jsdom": "^11.1.0",
     "rimraf": "^2.6.1"
   }
 }
