--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,24 @@
 {
   "presets": [
-    "es2015",
     "stage-0"
   ],
   "plugins": [
-    "add-module-exports"
-  ]
+    "transform-es3-member-expression-literals",
+    "transform-es3-property-literals"
+  ],
+  "env": {
+    "commonjs": {
+      "presets": [
+        "es2015"
+      ],
+      "plugins": [
+        ["transform-es2015-modules-commonjs", { "loose": true }]
+      ]
+    },
+    "es": {
+      "presets": [
+        ["es2015", { "modules": false }]
+      ]
+    }
+  }
 }
