--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 .DS_Store
-npm-debug.log*
-/node_modules
-/lib
-/.nyc_output
+*.log
+node_modules
+dist
+lib
+es
+coverage
 /test/**/dist
 
 # tnpm cache directory
 /test/**/.cache
+
+
