--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "whatitis",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Type checker",
   "repository": "https://github.com/Syzmex/whatitis.git",
   "keywords": [
     "whatitis"
   ],
-  "main": "lib/index",
+  "main": "lib/index.js",
+  "module": "es/index.js",
+  "jsnext:main": "es/index.js",
   "authors": [
     "ZhenyuXu <25213322@qq.com> (https://github.com/Syzmex)"
   ],
@@ -15,12 +17,23 @@
     "url": "https://github.com/Syzmex/whatitis/issues"
   },
   "files": [
-    "lib"
+    "dist",
+    "lib",
+    "es",
+    "src"
   ],
   "scripts": {
-    "test": "jest",
-    "build": "rimraf lib && babel src --out-dir lib",
-    "lint": "eslint --ext .js src",
+    "clean": "rimraf lib dist es coverage",
+    "test": "cross-env BABEL_ENV=commonjs jest",
+    "test:watch": "npm test -- --watch",
+    "test:cov": "npm test -- --coverage",
+    "build": "npm run clean && npm run build:commonjs && npm run build:es && npm run build:umd && npm run build:umd:min",
+    "build:es": "cross-env BABEL_ENV=es babel src --out-dir es",
+    "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib",
+    "build:umd": "cross-env BABEL_ENV=es NODE_ENV=development rollup -c -f umd -o dist/whatitis.js",
+    "build:umd:min": "cross-env BABEL_ENV=es NODE_ENV=production rollup -c -f umd -o dist/whatitis.min.js",
+    "prepare": "npm run clean && npm run lint && npm test && npm run build",
+    "lint": "eslint --ext .js src test build",
     "precommit": "npm run lint"
   },
   "dependencies": {
@@ -29,21 +42,31 @@
     "kind-of": "^3.1.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
-    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-jest": "^20.0.3",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
+    "babel-plugin-transform-es3-property-literals": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "cross-env": "^5.0.5",
     "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^13.0.0",
+    "eslint-config-airbnb": "^15.1.0",
     "eslint-config-promise": "^1.1.5",
     "eslint-plugin-flowtype": "^2.30.4",
     "eslint-plugin-import": "^2.3.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.1.0",
-    "expect": "^1.20.2",
     "jest": "^20.0.4",
     "jsdom": "^11.1.0",
-    "rimraf": "^2.6.1"
+    "rimraf": "^2.6.1",
+    "rollup": "^0.48.2",
+    "rollup-plugin-babel": "^3.0.2",
+    "rollup-plugin-commonjs": "^8.2.0",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-replace": "^1.1.1",
+    "rollup-plugin-uglify": "^2.0.1"
   }
 }
