--- a/.babelrc
+++ b/.babelrc
@@ -9,7 +9,7 @@
   "env": {
     "commonjs": {
       "presets": [
-        "es2015"
+        "env"
       ],
       "plugins": [
         ["transform-es2015-modules-commonjs", { "loose": true }]
@@ -17,7 +17,7 @@
     },
     "es": {
       "presets": [
-        ["es2015", { "modules": false }]
+        ["env", { "modules": false }]
       ]
     }
   }
