--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "whatitis",
-  "version": "1.1.1",
-  "description": "Type checker",
+  "version": "1.1.2",
+  "description": "A type checker",
   "repository": "https://github.com/Syzmex/whatitis.git",
   "keywords": [
     "whatitis"
@@ -37,36 +37,36 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "is-plain-object": "^2.0.1",
-    "isobject": "^3.0.0",
-    "kind-of": "^3.1.0"
+    "is-plain-object": "^2.0.4",
+    "isobject": "^3.0.1",
+    "kind-of": "^6.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^7.2.3",
-    "babel-jest": "^20.0.3",
+    "babel-eslint": "^8.0.1",
+    "babel-jest": "^21.2.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
     "babel-plugin-transform-es3-property-literals": "^6.22.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-stage-0": "^6.24.1",
-    "cross-env": "^5.0.5",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.1.0",
-    "eslint-config-promise": "^1.1.5",
-    "eslint-plugin-flowtype": "^2.30.4",
-    "eslint-plugin-import": "^2.3.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.1.0",
-    "jest": "^20.0.4",
-    "jsdom": "^11.1.0",
-    "rimraf": "^2.6.1",
-    "rollup": "^0.48.2",
+    "cross-env": "^5.1.1",
+    "eslint": "^4.10.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-promise": "^1.1.8",
+    "eslint-plugin-flowtype": "^2.39.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
+    "jest": "^21.2.1",
+    "jsdom": "^11.3.0",
+    "rimraf": "^2.6.2",
+    "rollup": "^0.50.0",
     "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-commonjs": "^8.2.0",
+    "rollup-plugin-commonjs": "^8.2.6",
     "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-replace": "^1.1.1",
+    "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-uglify": "^2.0.1"
   }
 }
