--- a/package.json
+++ b/package.json
@@ -2,18 +2,18 @@
   "name": "whatitis",
   "version": "1.1.2",
   "description": "A type checker",
-  "repository": "https://github.com/Syzmex/whatitis.git",
+  "repository": "https://github.com/jokemmy/whatitis.git",
   "keywords": [
     "whatitis"
   ],
   "main": "lib/index.js",
   "module": "es/index.js",
   "authors": [
-    "ZhenyuXu <25213322@qq.com> (https://github.com/Syzmex)"
+    "ZhenyuXu <25213322@qq.com> (https://github.com/jokemmy)"
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Syzmex/whatitis/issues"
+    "url": "https://github.com/jokemmy/whatitis/issues"
   },
   "files": [
     "dist",
@@ -21,17 +21,18 @@
     "es"
   ],
   "scripts": {
+    "dev": "cross-env BABEL_ENV=umd NODE_ENV=development rollup -w -c ./examples/rollup.config.dev.js",
     "clean": "rimraf lib dist es coverage",
     "test": "cross-env BABEL_ENV=commonjs jest",
     "test:watch": "npm test -- --watch",
     "test:cov": "npm test -- --coverage",
     "build": "npm run clean && npm run build:commonjs && npm run build:es && npm run build:umd && npm run build:umd:min",
-    "build:es": "cross-env BABEL_ENV=es babel src --out-dir es",
-    "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib",
-    "build:umd": "cross-env BABEL_ENV=es NODE_ENV=development rollup -c -f umd -o dist/whatitis.js",
-    "build:umd:min": "cross-env BABEL_ENV=es NODE_ENV=production rollup -c -f umd -o dist/whatitis.min.js",
+    "build:es": "cross-env BABEL_ENV=es babel src --out-dir es --ignore 'src/**/*.test.js'",
+    "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib --ignore 'src/**/*.test.js'",
+    "build:umd": "cross-env BABEL_ENV=umd NODE_ENV=development rollup -c -f umd -o dist/whatitis.js",
+    "build:umd:min": "cross-env BABEL_ENV=umd NODE_ENV=production rollup -c -f umd -o dist/whatitis.min.js",
     "prepare": "npm run clean && npm run lint && npm test && npm run build",
-    "lint": "eslint --ext .js src test build",
+    "lint": "eslint --ext .js src",
     "precommit": "npm run lint"
   },
   "dependencies": {
@@ -40,31 +41,44 @@
     "kind-of": "^6.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.1",
-    "babel-jest": "^21.2.0",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
-    "babel-plugin-transform-es3-property-literals": "^6.22.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "cross-env": "^5.1.1",
-    "eslint": "^4.10.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-promise": "^1.1.8",
-    "eslint-plugin-flowtype": "^2.39.1",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
-    "jest": "^21.2.1",
-    "jsdom": "^11.3.0",
-    "rimraf": "^2.6.2",
-    "rollup": "^0.50.0",
-    "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-commonjs": "^8.2.6",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-uglify": "^2.0.1"
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@babel/plugin-proposal-do-expressions": "^7.2.0",
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
+    "@babel/plugin-proposal-function-bind": "^7.2.0",
+    "@babel/plugin-proposal-function-sent": "^7.2.0",
+    "@babel/plugin-proposal-json-strings": "^7.2.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.2.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
+    "@babel/plugin-proposal-numeric-separator": "^7.2.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.3.2",
+    "@babel/plugin-proposal-throw-expressions": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-syntax-import-meta": "^7.2.0",
+    "@babel/plugin-transform-react-jsx": "^7.3.0",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "babel-eslint": "^10.0.1",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-import": "^1.11.0",
+    "cross-env": "^5.2.0",
+    "eslint": "^5.16.0",
+    "eslint-config-promise": "^2.0.2",
+    "eslint-plugin-import": "^2.17.2",
+    "jest": "^24.8.0",
+    "jsdom": "^15.1.0",
+    "rimraf": "^2.6.3",
+    "rollup": "^1.11.3",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^9.3.4",
+    "rollup-plugin-node-resolve": "^4.2.4",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-serve": "^1.0.1",
+    "rollup-plugin-uglify": "^6.0.2"
   }
 }
