--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "whatitis",
-  "version": "1.2.4",
+  "version": "1.2.5",
   "description": "A type checker",
   "repository": "https://github.com/jokemmy/whatitis.git",
   "keywords": [
@@ -39,7 +39,8 @@
     "core-js": "^3.6.4",
     "is-plain-object": "^2.0.4",
     "isobject": "^3.0.1",
-    "kind-of": "^6.0.0"
+    "kind-of": "^6.0.0",
+    "tape": "^5.4.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
@@ -71,7 +72,7 @@
     "eslint": "^5.16.0",
     "eslint-config-promise": "^2.0.2",
     "eslint-plugin-import": "^2.17.2",
-    "jest": "^24.8.0",
+    "jest": "24.8.0",
     "jsdom": "^15.1.0",
     "rimraf": "^2.6.3",
     "rollup": "^1.11.3",
